<resources>
    <string name="app_name">My Application</string>
    <string name="logo_description">앱 로고</string>
    <string name="hint_id">아이디를 입력하세요</string>
    <string name="hint_password">비밀번호를 입력하세요</string>
    <string name="login">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="hint_email">이메일</string>
    <string name="button_send_verification">인증 번호 발송</string>
    <string name="button_verify_code">인증번호 확인</string>
    <string name="hint_verification_code">인증번호 입력</string>
    <string name="button_check_id">중복 확인</string>
    <string name="hint_password_confirm">비밀번호 확인</string>
    <string name="button_submit_sign_up">회원가입</string>

    <string name="logout">로그아웃</string>

    <string name="email_hint">이메일을 입력하세요</string>
    <string name="send_verification_code">이메일 인증번호 발송</string>
    <string name="verification_code_hint">인증번호를 입력하세요</string>

    <string name="id_hint">아이디를 입력하세요</string>
    <string name="new_password_hint">새 비밀번호를 입력하세요</string>
    <string name="reset_password">비밀번호 재설정</string>

    <string name="plan_trip">여행 계획</string>
    <string name="recommend_trip">여행 추천</string>
    <string name="explore_nearby">주변 돌아보기</string>
    <string name="manage_account">계정 관리</string>

    <string name="edit_profile">개인정보 수정</string>

    <string name="old_password_hint">기존 비밀번호</string>
    <string name="confirm_new_password_hint">새 비밀번호를 다시 입력하세요</string>
    <string name="change_password">비밀번호 변경</string>

    <string name="travel_purpose_prompt">여행 목적을 선택하세요:</string>
    <string name="preferred_activity_prompt">선호하는 활동을 선택하세요:</string>
    <string name="accommodation_style_prompt">숙박 스타일을 선택하세요:</string>
    <string name="get_recommendation">추천받기</string>
    <string name="recommendation_result">추천 결과가 여기에 표시됩니다.</string>

</resources>