<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- 아이디 입력 -->
    <EditText
        android:id="@+id/editTextID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/id_hint"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintWidth_percent="0.8" />

    <!-- 이메일 입력 -->
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/editTextID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintWidth_percent="0.8" />

    <!-- 이메일 인증번호 발송 버튼 -->
    <Button
        android:id="@+id/buttonSendVerificationCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/send_verification_code"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintWidth_percent="0.8" />

    <!-- 인증번호 입력 -->
    <EditText
        android:id="@+id/editTextVerificationCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/verification_code_hint"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/buttonSendVerificationCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintWidth_percent="0.8" />

    <!-- 이전 비밀번호 입력 -->
    <EditText
        android:id="@+id/editTextOldPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/old_password_hint"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/editTextVerificationCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintWidth_percent="0.8" />

    <!-- 새 비밀번호 입력 -->
    <EditText
        android:id="@+id/editTextNewPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/new_password_hint"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/editTextOldPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintWidth_percent="0.8" />

    <!-- 새 비밀번호 확인 입력 -->
    <EditText
        android:id="@+id/editTextConfirmNewPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_new_password_hint"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/editTextNewPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintWidth_percent="0.8" />

    <!-- 비밀번호 변경 버튼 -->
    <Button
        android:id="@+id/buttonChangePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        app:layout_constraintTop_toBottomOf="@id/editTextConfirmNewPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintWidth_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>
