<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 이메일 입력 -->
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:background="@android:color/white"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <!-- 이메일 인증번호 발송 버튼 -->
    <Button
        android:id="@+id/buttonSendVerification"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/button_send_verification"
        app:layout_constraintTop_toTopOf="@id/editTextEmail"
        app:layout_constraintStart_toEndOf="@id/editTextEmail"
        android:layout_marginStart="8dp"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- 인증번호 입력 -->
    <EditText
        android:id="@+id/editTextVerificationCode"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:hint="@string/hint_verification_code"
        android:inputType="number"
        android:maxLength="6"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail"
        app:layout_constraintWidth_percent="0.8" />

    <!-- 인증번호 확인 버튼 -->
    <Button
        android:id="@+id/buttonVerifyCode"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:padding="12dp"
        android:text="@string/button_verify_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toEndOf="@id/editTextVerificationCode"
        app:layout_constraintTop_toTopOf="@id/editTextVerificationCode" />

    <!-- 아이디 입력 -->
    <EditText
        android:id="@+id/editTextID"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:hint="@string/hint_id"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextVerificationCode"
        app:layout_constraintWidth_percent="0.8" />

    <!-- 아이디 중복 확인 버튼 -->
    <Button
        android:id="@+id/buttonCheckID"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:padding="12dp"
        android:text="@string/button_check_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toEndOf="@id/editTextID"
        app:layout_constraintTop_toTopOf="@id/editTextID" />

    <!-- 비밀번호 입력 -->
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:background="@android:color/white"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/editTextID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintWidth_percent="0.8" />

    <!-- 비밀번호 확인 입력 -->
    <EditText
        android:id="@+id/editTextPasswordConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password_confirm"
        android:inputType="textPassword"
        android:background="@android:color/white"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintWidth_percent="0.8" />

    <!-- 회원가입 버튼 -->
    <Button
        android:id="@+id/buttonSubmitSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_submit_sign_up"
        app:layout_constraintTop_toBottomOf="@id/editTextPasswordConfirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintWidth_percent="0.8" />
</androidx.constraintlayout.widget.ConstraintLayout>
