<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- 여행 계획 버튼 -->
    <Button
        android:id="@+id/buttonPlanTrip"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="75dp"
        android:text="@string/plan_trip"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonRecommendTrip"
        app:layout_constraintWidth_percent="0.4" />

    <!-- 여행 추천 버튼 -->
    <Button
        android:id="@+id/buttonRecommendTrip"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="75dp"
        android:text="@string/recommend_trip"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonPlanTrip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.4" />

    <!-- 주변 돌아보기 버튼 -->
    <Button
        android:id="@+id/buttonExploreNearby"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:text="@string/explore_nearby"
        app:layout_constraintTop_toBottomOf="@id/buttonPlanTrip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonManageAccount"
        app:layout_constraintWidth_percent="0.4" />

    <!-- 계정 관리 버튼 -->
    <Button
        android:id="@+id/buttonManageAccount"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:text="@string/manage_account"
        app:layout_constraintTop_toBottomOf="@id/buttonPlanTrip"
        app:layout_constraintStart_toEndOf="@id/buttonExploreNearby"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.4" />


</androidx.constraintlayout.widget.ConstraintLayout>
